TLの画像をアクティブストレージに

--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -51,7 +51,7 @@
       </div>
       <div class="d-flex pb-3  justify-content-between" style="margin-left: 50px">
         <% if post.image? %>
-          <%= image_tag post.image.url, "data-lity" => "data-lity", class: "im" %>
+          <%= image_tag post.image, "data-lity" => "data-lity", class: "im" %>
         <% end %>
       </div>
 
