--- a/app/views/mailer/new.html.erb
+++ b/app/views/mailer/new.html.erb
@@ -16,9 +16,9 @@
   <div class="medium">
     <%= form_for(@inquiry, url: mailer_create_path) do |f|%>
       <%= f.label "名前" %>
-      <%= f.text_field :name, id: "inputEmail", class: "form-control",style: "height: 25px"%>
+      <%= f.text_field :name, id: "inputEmail", class: "form-control",style: "height: 25px",  required: true%>
       <%= f.label "email" %>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" , id: "inputEmail", class: "form-control",style: "height: 25px"%><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email" , id: "inputEmail", class: "form-control",style: "height: 25px",  required: true%><br />
       <%= f.label "お問い合わせ内容" %><br />
       <%= f.text_area :message , id: "inputEmail", class: "form-control", required: true%><br>
       <%= f.submit "送信", class:"btn btn-lg btn-secondary fw-bold border-white bg-blue" ,style: "margin-right: 10px; width: 150px;color:#FFF", data: { disable_with: "送信中..." }%>
