タイムラインの画像がactivestorageに対応、画像が破損していないか確認する機能追加

--- a/app/views/profiles/_post.html.erb
+++ b/app/views/profiles/_post.html.erb
@@ -43,8 +43,8 @@
         </p>
       </div>
       <div class="d-flex pb-3  justify-content-between" style="margin-left: 50px">
-        <% if post.image? %>
-          <%= image_tag post.image.url, "data-lity" => "data-lity", class: "im" %>
+        <% if post.image.attached? %>
+          <%= image_tag post.image, "data-lity" => "data-lity", class: "im" %>
         <% end %>
       </div>
 
