--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -50,7 +50,7 @@
         </p>
       </div>
       <div class="d-flex pb-3  justify-content-between" style="margin-left: 50px">
-        <% if post.image? %>
+        <% if post.image.attached? %>
           <%= image_tag post.image, "data-lity" => "data-lity", class: "im" %>
         <% end %>
       </div>
