直ったかな？

--- a/app/views/pages/_user.html.erb
+++ b/app/views/pages/_user.html.erb
@@ -4,8 +4,8 @@
       <div class="d-flex text-muted pt-3">
         <%= image_tag user.decorate.image , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
         <p class="pb-3 mb-0 small lh-sm w-100">
-          <strong class="d-block text-gray-dark"><%= user.name %> (<%= user.nickname %>)</strong>
-          @<%= user.userid %>
+          <strong class="d-block text-gray-dark"><%= user.decorate.name %> (<%= user.decorate.nickname %>)</strong>
+          @<%= user.decorate.userid %>
         </p>
       </div>
       <div style="padding-top: 19px">
