入学年一覧表示

--- a/app/views/devise/confirmations/show.html.erb
+++ b/app/views/devise/confirmations/show.html.erb
@@ -36,10 +36,11 @@
 
           <%= f.fields_for :profile do |pf| %>
             <div class="col-sm-6">
+              <% @this_year = Time.zone.now.strftime('%Y') %>
               <%= pf.label "入学年(西暦) ※一度入力したら変更できません", class: "form-label" %>
-              <%= pf.text_field :enrolled_year, class: "form-control", id: "school_class", placeholder: "入学年", maxlength: "4" %>
+              <%= pf.text_field :enrolled_year, class: "form-control", id: "school_class", placeholder: "1年生(#{@this_year.to_i - 1}年) 2年生(#{@this_year.to_i - 2}年)"+
+                " 3年生(#{@this_year.to_i - 3}年) 4年生(#{@this_year.to_i - 4}年)", maxlength: "4" %>
             </div>
-
             <div class="col-12">
               <%= pf.label "学科", class: "form-label" %>
               <br/>
