--- a/app/views/pages/_community.html.erb
+++ b/app/views/pages/_community.html.erb
@@ -9,7 +9,7 @@
         </p>
       </div>
       <div style="padding-top: 19px">
-        <% if is_community_favorite?(favorite_model,fixed_current_user,community) %>
+        <% if favorite_community_list.any? { |c| c == community} %>
           <%= button_to page_favorite_community_delete_path(community.id), method: :delete, class: 'bg-white',style: "border: none;color: rgba(29, 144, 190, 0.8);", data: { disable_with: '<i class="far fa-star"></i>' } do %>
             <i class="fas fa-star"></i>
           <% end %>
