--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -38,7 +38,7 @@
               お気に入り
             </button>
             <div class="collapse show mb-1" id="collapseExample1">
-              <%= render partial: 'pages/user', collection: @favorite_users, as: :user, locals: { fixed_current_user: @user, favorite_model: @favorite } %>
+              <%= render partial: 'pages/user', collection: @favorite_users, as: :user, locals: { favorite_user_list: @favorite_users } %>
             </div>
           <% end %>
 
@@ -46,7 +46,7 @@
             友だち
           </button>
           <div class="collapse show mb-1" id="collapseExample2">
-            <%= render partial: 'pages/user', collection: @mates, as: :user, locals: { fixed_current_user: @user, favorite_model: @favorite } %>
+            <%= render partial: 'pages/user', collection: @mates, as: :user, locals: { favorite_user_list: @favorite_users } %>
           </div>
         <% end %>
       </div>
@@ -82,12 +82,12 @@
 
             <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample3">お気に入り</button>
             <div class="collapse show mb-1" id="collapseExample3">
-              <%= render partial: 'pages/community', collection: @favorite_communities, as: :community, locals: { fixed_current_user: @user, favorite_model: @favorite } %>
+              <%= render partial: 'pages/community', collection: @favorite_communities, as: :community, locals: { favorite_community_list: @favorite_communities } %>
             </div>
           <% end %>
           <button type="button" class="btn btn-secondary btn-lg w-100 mt-2 mb-3" style="background-color: #00bfff" data-bs-toggle="collapse" data-bs-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample4">コミュニティ</button>
           <div class="collapse show mb-1" id="collapseExample4">
-            <%= render partial: 'pages/community', collection: @communities, as: :community, locals: { fixed_current_user: @user, favorite_model: @favorite } %>
+            <%= render partial: 'pages/community', collection: @communities, as: :community, locals: { favorite_community_list: @favorite_communities } %>
         <% end %>
         </div>
       </div>
