homeを変えた(レイアウト全然納得行かない)

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -72,6 +72,6 @@ body {
 }
 
 .Polka {
-  background-image: radial-gradient(rgba(29,144,190,0.3) 2px, #ffffff 2px);
+  background-image: radial-gradient(rgba(29,144,190,0.3) 2px, rgba(255,255,255,0.2) 2px);
   background-size: 20px 20px;
 }
