--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -5,7 +5,7 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <title>Amica</title>
-  <meta name="viewport" content="width=320,height=480,initial-scale=1.0,minimum-scale=1.0, maximum-scale=2.0,user-scalable=yes"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <%= favicon_link_tag('amica.ico') %>
   <%= stylesheet_link_tag 'home', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -25,7 +25,8 @@
 
   <body class="d-flex h-100 text-center text-dark">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-      <header class="<%=request.path_info == "/" ? "mb-auto" : "mb-3" %>">
+      <% path = request.path_info %>
+      <header class="<%= path == "/" || path == new_user_registration_path || path == new_user_session_path || path == avails_path ? "mb-auto" : "mb-3" %>">
         <div>
           <a class="float-md-start mb-0" href="/" style="font-size:30px; color: #037394;font-weight: bold;text-decoration: none;">Amica</a>
           <nav class="nav nav-masthead　bg-blue justify-content-center float-md-end">
@@ -43,7 +44,7 @@
       </main>
 
       <footer class="mt-auto text-dark border-top border-dark">
-        <p>©2021 - <%= DateTime.now.strftime('%Y') %> Avails Group<br />
+        <p>©2021 - <%= DateTime.now.strftime('%Y') %> <%= link_to("Avails Group", avails_path, class: "text-dark") %><br />
         <%= link_to("利用規約",static_path,class:"text-dark") %>
         <%= link_to("プライバシーポリシー",privacy_path,class:"text-dark")%></p>
       </footer>
