--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_pack_tag 'chat/show', 'data-turbolinks-track': 'reload' %>
+
 <%= stylesheet_link_tag 'chats', media: 'all', 'data-turbolinks-track': 'reload' %>
 <style>
     .flash {
@@ -12,22 +12,15 @@
             window.scroll(0, bottom);
         });
 </script>
-<input id="messagesJson" type="hidden" data-messages="<%= @message.select(:content,:user_id,:image,:file_name,:created_at,:url).to_json %>">
-
 <%= render "chats/menu_modal" %>
 <%= render "chats/file_modal" %>
 <%= render "chats/nav", user: @user %>
-<% if @message.size > 50 %>
-  <div class="container" style="text-align: center">
-  <button type="button"  class="morebtn btn btn-link">もっと見る</button>
-  </div>
-<% end %>
+<%= render "layouts/pagenate", pagenate: @pagenate %>
 <div class="container" id="body">
   <div id="chat" style="margin:1% 1% 70px 1%">
     <div id="messages">
       <% date_time = nil %>
-      <% if @message.size > 50 %>
-        <% @message.limit(50).offset((@message.size).to_i - 50).each do |m| %>
+        <% @pagenate.reverse.each  do |m| %>
           <% date_time = m.created_at if date_time == nil %>
           <% if m.created_at - date_time == 0 || (m.created_at.to_date - date_time.to_date).to_i >= 1 %>
             <div id="<%= m.created_at.strftime("%Y-%m-%d") %>" class="date"><%= m.created_at.strftime("%Y-%m-%d") %></div>
@@ -35,16 +28,6 @@
           <%= render 'chats/chat_message', message: m, user: m.user_id === current_user.id %>
           <% date_time = m.created_at %>
         <% end %>
-      <% else %>
-        <% @message.each do |m| %>
-          <% date_time = m.created_at if date_time == nil %>
-          <% if m.created_at - date_time == 0 || (m.created_at.to_date - date_time.to_date).to_i >= 1 %>
-            <div id="<%= m.created_at.strftime("%Y-%m-%d") %>" class="date"><%= m.created_at.strftime("%Y-%m-%d") %></div>
-          <% end %>
-          <%= render 'chats/chat_message', message: m, user: m.user_id === current_user.id %>
-          <% date_time = m.created_at %>
-        <% end %>
-      <% end %>
     </div>
   </div>
   <%= render "chats/form", user: @user, room: @room %>
