チャットのおかしかったところの修正

--- a/app/views/chats/_chat_message.html.erb
+++ b/app/views/chats/_chat_message.html.erb
@@ -6,9 +6,18 @@
                       class: "icon bd-placeholder-img flex-shrink-0 me-2 mt-2 ", style: "float: left;", width: "40px", height: "40px" %>
       <% end %>
     <% end %>
-    <div class="<%= html_sub_class(user) %> my-1 p-1 mt-2" style="max-width: 40%;">
-      <div class="messages container p-1">
-        <%= chat_content(message) %>
+    <div class="d-none d-lg-block d-xl-block d-xxl-block">
+      <div class="<%= html_sub_class(user) %> my-1 p-1" style="max-width: 50%;">
+        <div class="messages container p-1">
+          <%= chat_content(message) %>
+        </div>
+      </div>
+    </div>
+    <div class="d-block d-lg-none d-xl-none d-xxl-none">
+      <div class="<%= html_sub_class(user) %> my-1 p-1" style="max-width: 70%;">
+        <div class="messages container p-1">
+          <%= chat_content(message) %>
+        </div>
       </div>
     </div>
     <% if user %>
