--- a/app/views/communities/edit.html.erb
+++ b/app/views/communities/edit.html.erb
@@ -45,7 +45,7 @@
     <div class="col-md-12 col-lg-12">
       <div class="row g-3">
         <div class="col-sm-12">
-          <%= f.label "コミュニティ名(記号は半角のみです)", class: "form-label" %>
+          <%= f.label "コミュニティ名", class: "form-label" %>
           <%= f.text_field :name, autocomplete: "name", class: "form-control", :placeholder => "コミュニティ名" %>
         </div>
 
