--- a/app/views/profiles/_post.html.erb
+++ b/app/views/profiles/_post.html.erb
@@ -26,7 +26,7 @@
     }
 </style>
 <div id="post_<%= post.id %>">
-  <div class="my-3 p-3 bg-white rounded shadow-sm">
+  <div class="my-3 p-3 bg-white rounded shadow-sm" style="word-break: break-all">
     <div class="panel-content panel-activity">
       <div class="d-flex text-muted">
         <%= link_to profile_path(post.user.userid), style: "color:black" do %>
