--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,5 +1,5 @@
 html{
-
+  height: 100%
 }
 
 /*
@@ -21,10 +21,13 @@ html{
  */
 
 body {
-  background-image: image-url("background.jpg");
-  background-size: cover;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+}
+
+#background{
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
 }
 
 .cover-container {
@@ -36,13 +39,11 @@ body {
  * Header
  */
 
-.nav-masthead .nav-link {
-  padding: .25rem 0;
-  font-weight: 700;
-  color: rgba(0, 0, 0,.8);
-  background-color: transparent;
-  border-bottom: .25rem solid transparent;
+header{
+  font-family: 'Rubik', 'M PLUS Rounded 1c', sans-serif;
+  border: rgba(166, 145, 113, 0.2) solid 1px;
 }
+
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
