--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,8 +1,35 @@
-<%= stylesheet_link_tag 'home', media: 'all', 'data-turbolinks-track': 'reload' %>
-<%= stylesheet_link_tag 'top', media: 'all', 'data-turbolinks-track': 'reload' %>
-<script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
-<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css"/>
-<%= javascript_pack_tag 'home/index' %>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+  <title>Amica</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= favicon_link_tag('amica.ico') %>
+  <%= stylesheet_link_tag 'home', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'top', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css"/>
+  <%= javascript_pack_tag 'home/index' %>
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'home/settings' %>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
+  <meta name=”description” content=”ISC学生向けの友達作りサイトです。”/>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FEWKYWJMZD"></script>
+  <script>
+      window.dataLayer = window.dataLayer || [];
+
+      function gtag() {
+          dataLayer.push(arguments);
+      }
+
+      gtag('js', new Date());
+
+      gtag('config', 'G-FEWKYWJMZD');
+  </script>
+</head>
 
 <!--
  .----------------.  .----------------.  .----------------.  .----------------.  .----------------.  .----------------.
@@ -29,25 +56,56 @@
  '----------------'  '----------------'  '----------------'  '----------------'  '----------------'  '----------------'
 -->
 
-<div class="container">
-  <%= image_tag("top_icon.png", class: "icon title-image", style: "margin-bottom: 30px;display:none;") %>
-  <div class="title-text" style="margin-bottom: 30px;opacity:0">
-    <p>Amicaはあなたの生活に<u>新たな出会いをプラス</u>する</p>
-    <p><u>コミュニケーションツール</u>です</p>
+<body class="d-flex flex-column h-100 text-center text-dark">
+<div id="background"></div>
+<header class="full mb-auto">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light px-4">
+    <%= link_to("Amica", "/", class: "mb-0 lh-sm text-light", style: "margin-left:7px;font-size:24px;text-decoration: none;font-weight:bold") %>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDropdown" aria-controls="navbarDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarDropdown">
+      <div class="navbar-nav me-auto m-0 mb-lg-0"></div>
+      <ul class="navbar-nav d-flex">
+        <li class="nav-item active">
+          <a class="nav-link" href="<%= about_path %>">概要</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="<%= contact_path %>">お問い合わせ</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="<%= new_user_registration_path %>">サインイン</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="<%= new_user_session_path %>">ログイン</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <p class="notice"><%= notice %></p>
+  <p class="notice"><%= alert %></p>
+  <div class="position-absolute h-75 w-100 m-0 d-flex align-items-center justify-content-center">
+    <%= image_tag("top_icon.png", class: "icon title-image", style: "display:none;") %>
   </div>
+</header>
 
-  <p class="lead buttons" style="opacity:0">
-    <%= link_to "新規登録",
-                new_user_registration_path,
-                class: "btn btn-lg btn-secondary fw-bold border-white bg-blue",
-                style: "margin-right: 10px; width: 150px;color:#FFF"
-    %>
-    <%= link_to "ログイン",
-                new_user_session_path,
-                class: "btn btn-lg btn-secondary fw-bold border-white bg-blue",
-                style: "width: 150px;color:#FFF"
-    %>
-  </p>
-</div>
+<main>
+  <div class="container">
+    <div class="title-text" style="margin-bottom: 30px;opacity:0">
+      <p>Amicaはあなたの生活に<u>新たな出会いをプラス</u>する</p>
+      <p><u>コミュニケーションツール</u>です</p>
+    </div>
+  </div>
+</main>
 
-
+<footer class="footer mt-auto py-3">
+  <div class="container">
+    <span class="text-muted">
+      ©2021 - <%= DateTime.now.strftime('%Y') %> <%= link_to("Avails Group", avails_path, class: "text-dark") %>
+      <%= link_to("利用規約", static_path, class: "text-dark") %>
+      <%= link_to("プライバシーポリシー", privacy_path, class: "text-dark") %>
+    </span>
+  </div>
+</footer>
+</body>
+</html>
