--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -29,8 +29,7 @@
 
   <body class="d-flex flex-column h-100 text-center text-dark">
     <div id="background"></div>
-    <% path = request.path_info %>
-    <header class="<%= path == "/" || path == new_user_registration_path || path == new_user_session_path || path == avails_path ? "mb-auto" : "mb-3" %>">
+    <header class="m-0 p-0">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light px-4">
         <%= link_to("Amica", "/", class: "mb-0 lh-sm text-light", style: "margin-left:7px;font-size:24px;text-decoration: none;font-weight:bold") %>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDropdown" aria-controls="navbarDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,11 +55,10 @@
       </nav>
     </header>
 
-    <main class="px-3">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+    <main>
       <%= yield %>
     </main>
+
     <footer class="footer mt-auto py-3">
       <div class="container">
           <span class="text-muted">©2021 - <%= DateTime.now.strftime('%Y') %> <%= link_to("Avails Group", avails_path, class: "text-dark") %>
