--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -22,7 +22,11 @@ body {
   width: 30px;
   height: 30px;
   border: 5px solid;
-  border-color:  transparent transparent #565656 #565656;
+  border-color:  transparent transparent #343434 #343434;
   transform: rotate(-45deg);
+}
+
+.background{
+  z-index: -1;
 }
 
