--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -8,8 +8,6 @@
   <%= favicon_link_tag('amica.ico') %>
   <%= stylesheet_link_tag 'home', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= stylesheet_link_tag 'top', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
-  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css"/>
   <%= javascript_pack_tag 'home/index' %>
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   <%= javascript_pack_tag 'home/settings' %>
@@ -57,7 +55,6 @@
 -->
 
 <body class="d-flex flex-column h-100 text-center text-dark">
-<div id="background"></div>
 <header class="full mb-auto">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light px-4">
     <%= link_to("Amica", "/", class: "mb-0 lh-sm text-light", style: "margin-left:7px;font-size:24px;text-decoration: none;font-weight:bold") %>
@@ -85,20 +82,28 @@
   <p class="notice"><%= notice %></p>
   <p class="notice"><%= alert %></p>
   <div class="position-absolute h-75 w-100 m-0 d-flex align-items-center justify-content-center">
-    <%= image_tag("top_icon.png", class: "icon title-image", style: "display:none;") %>
+    <%= image_tag("top_icon.png", class: "icon", id:"title-image") %>
+  </div>
+  <div class="position-absolute bottom-0 w-100 d-flex align-items-center justify-content-center" style="margin-bottom: 60px">
+    <span id="step" class="fw-bold" style="color: #343434;display: none">もっと見る</span>
+  </div>
+  <div class="position-absolute bottom-0 w-100 d-flex align-items-center justify-content-center" style="margin-bottom: 40px">
+    <div id="arrow" class="arrow1" style="display: none"></div>
   </div>
 </header>
 
 <main>
+  <div id="background"></div>
   <div class="container">
-    <div class="title-text" style="margin-bottom: 30px;opacity:0">
+    <div id="about" class="mt-5 fs-5">
+      <h2>概要</h2>
       <p>Amicaはあなたの生活に<u>新たな出会いをプラス</u>する</p>
       <p><u>コミュニケーションツール</u>です</p>
     </div>
   </div>
 </main>
 
-<footer class="footer mt-auto py-3">
+<footer class="footer py-3">
   <div class="container">
     <span class="text-muted">
       ©2021 - <%= DateTime.now.strftime('%Y') %> <%= link_to("Avails Group", avails_path, class: "text-dark") %>
