--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -3,3 +3,4 @@
 @import "~tag-it/css/jquery.tagit";
 @import "cropperjs/dist/cropper";
 @import "~lity/dist/lity.min";
+@import "~animon/dist/animon";
