--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <%= stylesheet_link_tag 'registrations', media: 'all', 'data-turbolinks-track': 'reload' %>
-<div class="register">
+<div class="register container">
   <h1 style= "margin-bottom: 50px">新規登録</h1>
 
 
