--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -54,7 +54,8 @@
  '----------------'  '----------------'  '----------------'  '----------------'  '----------------'  '----------------'
 -->
 
-<body class="d-flex flex-column h-100 text-center text-dark">
+<body class="h-100 text-center text-dark">
+<div id="background"></div>
 <header class="full mb-auto">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light px-4">
     <%= link_to("Amica", "/", class: "mb-0 lh-sm text-light", style: "margin-left:7px;font-size:24px;text-decoration: none;font-weight:bold") %>
@@ -94,8 +95,8 @@
   </a>
 </header>
 
+
 <main>
-  <div id="background"></div>
   <div class="container text-center" id="about">
     <div class="my-5 fs-5 shadow-sm animonItem" data-effect="scaleDown">
       <div class="px-3">
