--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -29,7 +29,7 @@
 
   <body class="d-flex flex-column h-100 text-center text-dark">
     <div id="background"></div>
-    <header class="m-0 p-0">
+    <header class="m-0 p-0 mb-auto">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light px-4">
         <%= link_to("Amica", "/", class: "mb-0 lh-sm text-light", style: "margin-left:7px;font-size:24px;text-decoration: none;font-weight:bold") %>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDropdown" aria-controls="navbarDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,6 +56,8 @@
     </header>
 
     <main>
+      <p class="notice"><%= notice %></p>
+      <p class="notice"><%= alert %></p>
       <%= yield %>
     </main>
 
