確認できたレイアウトのバグを多分修正

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,3 +4,4 @@
 @import "cropperjs/dist/cropper";
 @import "~lity/dist/lity.min";
 @import "~animon/dist/animon";
+@import "~cookieconsent/build/cookieconsent.min";
