--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -86,10 +86,10 @@
     <%= image_tag("top_icon.png", class: "icon", id: "title-image") %>
   </div>
   <a class="goSection" href="#about">
-    <div class="position-absolute bottom-0 w-100 d-flex align-items-center justify-content-center" style="margin-bottom: 80px">
+    <div class="position-absolute bottom-0 w-100 d-flex align-items-center justify-content-center" style="margin-bottom: 13vh">
       <span id="step" class="fw-bold" style="color: #343434;display: none">もっと見る</span>
     </div>
-    <div class="position-absolute bottom-0 w-100 d-flex align-items-center justify-content-center" style="margin-bottom: 60px">
+    <div class="position-absolute bottom-0 w-100 d-flex align-items-center justify-content-center" style="margin-bottom: 10vh">
       <div id="arrow" class="arrow1" style="display: none"></div>
     </div>
   </a>
