--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -29,7 +29,7 @@
     <div class="row">
       <div class="col-md-12 text-center" style="z-index: 1;">
         <div class="panel panel-default">
-          <div class="userprofile social">
+          <div class="userprofile <%= @user.header.attached? ? '' : 'social' %>">
             <div class="d-flex justify-content-between">
               <div></div>
               <div style="margin-right: 10px">
