header画像切り替え機能実装開始

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'profiles' %>
 <%= javascript_pack_tag 'profiles/edit' %>
-
+<%= javascript_pack_tag 'profiles/header_edit' %>
 <script>
     $(document).ready(function () {
         $('#accreditation').tagit({
@@ -66,6 +66,49 @@
       </div>
     </div>
   </div>
+  <!-- Modal -->
+  <div class="modal fade" id="headerModal" tabindex="-1" aria-labelledby="headerModalLabel" aria-hidden="true" style="padding-right: 0">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="headerModalLabel">画像トリミング</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <h4 class="modal-text">画像を選択してください</h4>
+          <div class="form_wrapper">
+            <div id="image-wrapper">
+              <%= f.file_field :images, id: "trim_img_uploder", value: "assets/default", accept: 'image/jpg,image/jpeg,image/png' %>
+              <%= f.hidden_field :image, id: "image", value: defined?(@image) ? @image : nil%>
+              <%= f.hidden_field :image_x, id: "image_x", value: defined?(@image_x) ? @image_x : nil %>
+              <%= f.hidden_field :image_y, id: "image_y", value: defined?(@image_y) ? @image_y : nil %>
+              <%= f.hidden_field :image_w, id: "image_w", value: defined?(@image_w) ? @image_w : nil %>
+              <%= f.hidden_field :image_h, id: "image_h", value: defined?(@image_h) ? @image_h : nil %>
+              <%= f.hidden_field :aspect_numerator, id: "aspect_numerator", value: "1.0" %>
+              <%= f.hidden_field :aspect_denominator, id: "aspect_denominator", value: "1.0" %>
+
+              <div id="prev_img">
+                <%= image_tag current_user.decorate.header, :size => '320x180', class: "user_header" %>
+              </div>
+            </div>
+          </div>
+          <div id="modal_area" style="display: none;">
+            <div class="modal_wrapper">
+              <div class="modal_padding modal_title_wrapper">
+                <h4>範囲を選択してください</h4>
+              </div>
+              <div class="canvas_wrapper">
+                <canvas id="source_canvas" width="1" height="1"></canvas>
+              </div>
+              <div class="modal-footer">
+                <button type="button" id="close_button" class="btn btn-primary" data-bs-dismiss="modal">画像を切り取る</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="container" style="max-width: 960px">
     <div class="py-5 text-center">
       <h2>プロフィール編集</h2>
@@ -74,7 +117,7 @@
       <p id="image_text">現在のヘッダー</p>
       <div id="user_icon">
         <label>
-          <button type="button" class="btn btn-primary" style="display: none;" data-bs-toggle="modal" data-bs-target="#exampleModal"></button>
+          <button type="button" class="btn btn-primary" style="display: none;" data-bs-toggle="modal" data-bs-target="#headerModal"></button>
           <%= image_tag current_user.decorate.header, :size => '320x180', class: "user_header" %>
         </label>
       </div>
