サインインをサインアップに変更

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -72,7 +72,7 @@
           <a class="nav-link" href="<%= contact_path %>">お問い合わせ</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="<%= new_user_registration_path %>">サインイン</a>
+          <a class="nav-link" href="<%= new_user_registration_path %>">サインアップ</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="<%= new_user_session_path %>">ログイン</a>
