overflowのバグを修正

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -62,11 +62,13 @@
       <%= yield %>
     </main>
 
-    <footer class="footer mt-auto py-3">
+    <footer class="text-center bg-gray text-light" style="margin-top:20px">
       <div class="container">
-          <span class="text-muted">©2021 - <%= DateTime.now.strftime('%Y') %> <%= link_to("Avails Group", avails_path, class: "text-dark") %>
-            <%= link_to("利用規約", static_path, class: "text-dark") %>
-            <%= link_to("プライバシーポリシー", privacy_path, class: "text-dark") %></span>
+        <span class="text-muted">
+          ©2021 - <%= DateTime.now.strftime('%Y') %> <%= link_to("Avails Group", avails_path, class: "text-dark") %>
+          <%= link_to("利用規約", static_path, class: "text-dark") %>
+          <%= link_to("プライバシーポリシー", privacy_path, class: "text-dark") %>
+        </span>
       </div>
     </footer>
   </body>
