--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -71,34 +71,34 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="headerModalLabel">画像トリミング</h5>
+          <h5 class="modal-title" id="headerModalLabel">ヘッダートリミング</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <h4 class="modal-text">画像を選択してください</h4>
+          <h4 class="header_modal-text">画像を選択してください</h4>
           <div class="form_wrapper">
             <div id="image-wrapper">
-              <%= f.file_field :images, id: "trim_img_uploder", value: "assets/default", accept: 'image/jpg,image/jpeg,image/png' %>
-              <%= f.hidden_field :image, id: "image", value: defined?(@image) ? @image : nil%>
-              <%= f.hidden_field :image_x, id: "image_x", value: defined?(@image_x) ? @image_x : nil %>
-              <%= f.hidden_field :image_y, id: "image_y", value: defined?(@image_y) ? @image_y : nil %>
-              <%= f.hidden_field :image_w, id: "image_w", value: defined?(@image_w) ? @image_w : nil %>
-              <%= f.hidden_field :image_h, id: "image_h", value: defined?(@image_h) ? @image_h : nil %>
-              <%= f.hidden_field :aspect_numerator, id: "aspect_numerator", value: "1.0" %>
-              <%= f.hidden_field :aspect_denominator, id: "aspect_denominator", value: "1.0" %>
+              <%= f.file_field :header_images, id: "header_trim_img_uploder", value: "assets/default", accept: 'image/jpg,image/jpeg,image/png' %>
+              <%= f.hidden_field :header, id: "header", value: defined?(@header) ? @header : nil%>
+              <%= f.hidden_field :header_image_x, id: "header_image_x", value: defined?(@header_x) ? @header_x : nil %>
+              <%= f.hidden_field :header_image_y, id: "header_image_y", value: defined?(@header_y) ? @header_y : nil %>
+              <%= f.hidden_field :header_image_w, id: "header_image_w", value: defined?(@header_w) ? @header_w : nil %>
+              <%= f.hidden_field :header_image_h, id: "header_image_h", value: defined?(@header_h) ? @header_h : nil %>
+              <%= f.hidden_field :header_aspect_numerator, id: "header_aspect_numerator", value: "9.0" %>
+              <%= f.hidden_field :header_aspect_denominator, id: "header_aspect_denominator", value: "16.0" %>
 
-              <div id="prev_img">
+              <div id="header_prev_img">
                 <%= image_tag current_user.decorate.header, :size => '320x180', class: "user_header" %>
               </div>
             </div>
           </div>
-          <div id="modal_area" style="display: none;">
+          <div id="header_modal_area" style="display: none;">
             <div class="modal_wrapper">
               <div class="modal_padding modal_title_wrapper">
                 <h4>範囲を選択してください</h4>
               </div>
               <div class="canvas_wrapper">
-                <canvas id="source_canvas" width="1" height="1"></canvas>
+                <canvas id="header_source_canvas" width="1" height="1"></canvas>
               </div>
               <div class="modal-footer">
                 <button type="button" id="close_button" class="btn btn-primary" data-bs-dismiss="modal">画像を切り取る</button>
@@ -114,17 +114,17 @@
       <h2>プロフィール編集</h2>
       <%= render 'layouts/error_messages', model: f.object %>
       <p class="lead">ここではプロフィールを変更することが出来ます</p>
-      <p id="image_text">現在のヘッダー</p>
-      <div id="user_icon">
+      <p id="header_text">現在のヘッダー</p>
+      <div id="user_header">
         <label>
           <button type="button" class="btn btn-primary" style="display: none;" data-bs-toggle="modal" data-bs-target="#headerModal"></button>
           <%= image_tag current_user.decorate.header, :size => '320x180', class: "user_header" %>
         </label>
       </div>
       <label>
-        <button type="button" class="btn btn-primary" style="display: none;" data-bs-toggle="modal" data-bs-target="#exampleModal"></button>
-        <canvas id="cropped_canvas" style="display:none;width: 200px;height: 200px;"></canvas>
-        <img src="<%=@image if defined?(@image) %>" id="result-img" style="display:none;width: 200px;height: 200px;">
+        <button type="button" class="btn btn-primary" style="display: none;" data-bs-toggle="modal" data-bs-target="#headerModal"></button>
+        <canvas id="header_cropped_canvas" style="display:none;width: 200px;height: 200px;"></canvas>
+        <img src="<%=@image if defined?(@image) %>" id="header_result-img" style="display:none;width: 320px;height: 180px;">
       </label>
       <p id="image_text">現在のアイコン</p>
       <div id="user_icon">
